# mincalc

./: .gitignore  Cargo.toml  Dioxus.toml
.github/workflows/: deploy.yml
src/: main.rs  state.rs  storage.rs
src/chemistry/: compounds.rs  conversions.rs  mod.rs
src/components/: concentrate_builder.rs  mod.rs  recipe_builder.rs
